# desktop_ai_assistant

./: .gitignore  README.md  main.py  pyproject.toml
src/analyzer/: activity_analyzer.py
src/gui/: main_window.py
src/llm/: ollama_client.py
src/recorder/: audio_recorder.py  event_tracker.py  screen_recorder.py
src/utils/: data_cleaner.py
